--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "csv-parse": "^5.3.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
-    "papaparse": "^5.4.1",
     "pg": "^8.11.0"
   }
 }
