--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "db-init": "psql -U sdcadmin -d sdcdb -a -f server/postgresqlSchema.sql",
-    "db-seed": "node server/dbSeed.js",
+    "db-seed": "node server/dbSeed.js --max_old_space_size=7000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Xintong Mi",
