--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "db-init": "psql -U sdcadmin -d sdcdb -a -f server/postgresqlSchema.sql",
     "db-seed": "node server/dbSeed.js --max_old_space_size=7000",
-    "server-dev": "npx nodemon --watch server server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server-dev": "npx nodemon --watch server server/app.js",
+    "test": "jest"
   },
   "author": "Xintong Mi",
   "license": "ISC",
@@ -17,7 +17,15 @@
     "csv-parse": "^5.3.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "collectCoverage": true
   }
 }
