--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "db-init": "psql -U sdcadmin -d sdcdb -a -f server/postgresqlSchema.sql",
     "db-seed": "node server/dbSeed.js --max_old_space_size=7000",
     "server-dev": "npx nodemon --watch server server/app.js",
-    "test": "jest"
+    "test": "jest --forceExit"
   },
   "author": "Xintong Mi",
   "license": "ISC",
