--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "rules": {
     "prettier/prettier": ["error"],
     "no-console": "off",
-        "no-restricted-syntax": ["error"]
+    "no-restricted-syntax": ["error"],
+    "no-multi-str": "off"
   }
 }
