--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "eslint": "^8.41.0",
