--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "csv-parse": "^5.3.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
